Make web_client sign in-able

--- a/web_client/views/layout.erb
+++ b/web_client/views/layout.erb
@@ -11,8 +11,15 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
-          <li><a href="/sessions">Sessions</a></li>
+          <% if session[:user] %>
+            <li><a href="/sessions">Sessions</a></li>
+          <% end %>
         </ul>
+        <% if session[:user] %>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/signout">Sign out</a></li>
+          </ul>
+        <% end %>
       </div>
     </nav>
     <div class="container">
