--- a/web_client/views/signin.erb
+++ b/web_client/views/signin.erb
@@ -4,7 +4,7 @@
     <form method="post">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" placeholder="Username" name="username">
+        <input type="text" class="form-control" id="username" placeholder="Username" name="username" autofocus="autofocus">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
