Change commands to tasks (terminology)

--- a/web_client/views/index.erb
+++ b/web_client/views/index.erb
@@ -11,7 +11,7 @@
 </div>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h1>Commands</h1>
-    <p>TODO: Commands list here</p>
+    <h1>Tasks</h1>
+    <p>TODO: Tasks list here</p>
   </div>
 </div>
